--- a/README.rdoc
+++ b/README.rdoc
@@ -12,4 +12,10 @@ You'll need toto:
   
 Then you'll need henry:
 
-  git 
+  git clone git://github.com/philcrissman/henry.git myblog
+  
+Everything else you'll do just as advised on for toto/dorothy:
+
+  cd myblog
+  heroku create myblog
+  git push heroku master
